--- a/src/app/scheduler/components/appointment/appointment.component.html
+++ b/src/app/scheduler/components/appointment/appointment.component.html
@@ -20,30 +20,42 @@
           <div class="c-app-header-week-label">
             {{ getWeekHeaders(indexOfElement) }}
           </div>
-          <button mat-mini-fab color="{{ getHeaderColor(d) }}">{{ d }}</button>
+          <button
+            mat-mini-fab
+            color="{{ getHeaderColor(d) }}"
+            (click)="updateSelDate(d)"
+          >
+            {{ d }}
+          </button>
         </div>
       </mat-grid-tile>
     </mat-grid-list>
   </mat-card-title>
   <mat-card-content class="c-app-book-content">
-    <div *ngFor="let t of timeList" class="c-app-book-content-list">
-      <div class="c-app-book-left-corner">
-        <div>{{ t }}</div>
+    <div class="c-app-book-time-list" aria-hidden="true">
+      <div *ngFor="let t of timeList" class="c-app-book-content-list">
+        <div class="c-app-book-left-corner">
+          <div>{{ t }}</div>
+        </div>
+        <div class="c-app-book-space"></div>
       </div>
-      <div class="c-app-book-space">
-        <div class="c-app-book-space-line"></div>
-      </div>
-      <mat-grid-list
-        cols="{{ computeCols }}"
-        rowHeight="84px"
-        class="c-app-book-content-grid-list"
-      >
-        <mat-grid-tile
-          *ngFor="let d of calcWeekDates; let indexOfElement = index"
-        >
-          <div class="c-app-appointment-description"></div>
-        </mat-grid-tile>
-      </mat-grid-list>
     </div>
+
+    <mat-grid-list
+      cols="{{ computeCols }}"
+      rowHeight="1103px"
+      class="c-app-book-content-grid-list"
+    >
+      <mat-grid-tile
+        *ngFor="let d of calcWeekDates; let indexOfElement = index"
+      >
+        <div class="c-app-grid-time-list" aria-hidden="true">
+          <div *ngFor="let t of timeList" class="c-app-book-content-list">
+            <div class="c-app-book-timeline"></div>
+          </div>
+        </div>
+        <div class="c-app-appointment-description"></div>
+      </mat-grid-tile>
+    </mat-grid-list>
   </mat-card-content>
 </mat-card>
