--- a/src/app/scheduler/components/appointment/appointment.component.scss
+++ b/src/app/scheduler/components/appointment/appointment.component.scss
@@ -21,10 +21,11 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    position: relative;
   }
 
   .c-app-book-grid-list {
-    width: calc(100% - 96px);
+    width: calc(100% - 99px);
   }
 
   .c-app-book-header {
@@ -66,27 +67,84 @@
     max-height: calc(100vh - 188px);
     margin-top: 84px;
     width: 100%;
+    display: flex;
+    position: relative;
 
-    .c-app-book-content-list {
-      display: flex;
+    .c-app-book-time-list {
+      width: 58px;
 
-      .c-app-book-space {
-        border-bottom: 1px solid #e0e0e0;
-        border-right: 1px solid #e0e0e0;
-        height: 84px;
+      .c-app-book-left-corner {
+        height: 48px;
       }
 
-      .c-app-book-content-grid-list {
-        width: calc(100% - 56px);
-        border-bottom: 1px solid #e0e0e0;
+      .c-app-book-content-list {
+        display: flex;
 
-        .c-app-appointment-description {
-          width: 100%;
-          height: 84px;
-          min-width: 14.7%;
+        .c-app-book-space {
           border-right: 1px solid #e0e0e0;
+          height: 48px;
+
+          &:after {
+            content: "";
+            border-bottom: 1px solid #e0e0e0;
+            width: 100%;
+            height: 48px;
+            z-index: 3;
+            top: -2px;
+            pointer-events: none;
+            position: absolute;
+          }
         }
       }
     }
+
+    .c-app-book-content-grid-list {
+      width: calc(100% - 56px);
+
+      .c-app-grid-time-list {
+        .c-app-book-timeline {
+          height: 48px;
+
+          &:after {
+            content: "";
+            border-bottom: 1px solid #e0e0e0;
+            position: absolute;
+            width: 100%;
+            height: 48px;
+            margin-top: -2px;
+            z-index: 3;
+            pointer-events: none;
+          }
+        }
+      }
+
+      .c-app-appointment-description {
+        width: 100%;
+        height: 100%;
+        min-width: 14.7%;
+        border-right: 1px solid #e0e0e0;
+        display: block;
+        position: relative;
+      }
+    }
   }
+}
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
