--- a/src/app/scheduler/components/appointment/appointment.component.scss
+++ b/src/app/scheduler/components/appointment/appointment.component.scss
@@ -125,7 +125,66 @@
         border-right: 1px solid #e0e0e0;
         display: block;
         position: relative;
+
+        .c-app-appointment-button {
+          height: 45px;
+          width: 100%;
+          display: block;
+          position: absolute;
+          text-align: left;
+          font-weight: normal;
+          padding: 0 6px;
+
+          div {
+            font-weight: normal;
+            font-size: 11px;
+            line-height: 1;
+          }
+        }
       }
+    }
+  }
+}
+
+.c-app-dialog-content {
+  width: 400px;
+  height: 400px;
+  border: solid 1px #ccc;
+  color: rgba(0, 0, 0, 0.87);
+  cursor: move;
+  background: #fff;
+  border-radius: 4px;
+  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+  0 2px 2px 0 rgba(0, 0, 0, 0.14),
+  0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  padding: 15px;
+
+  &:active {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  }
+
+  .c-app-appointment-temp-save {
+    margin-left: 10px;
+  }
+
+  .c-app-dialog-form-field {
+    width: 100%;
+  }
+
+  .c-app-dialog-date-time-field {
+    width: 100%;
+    display: flex;
+    align-items: center;
+
+    .c-app-dialog-date-filter-field {
+      width: 50%;
+    }
+
+    .c-app-dialog-time-filter-field {
+      width: 25%;
     }
   }
 }
